code25_all/scala/7958068.txt
apply
object Array
Array(1,2,3) match { case Array(a, b, c) => a + b + c }

WrappedArray
scala>  class A(val x: Int)
scala>  new A(4) match { case A(x) => x }
<console>:9: error: not found: value A
              new A(4) match { case A(x) => x }
                                    ^
<console>:9: error: not found: value x
              new A(4) match { case A(x) => x }

